globus-gridftp-server (9.9-1+gt6.@distro@) @distro@; urgency=low

  * add -dlpreload force tests

 -- Globus Toolkit <support@globus.org>  Thu, 21 Apr 2016 11:21:20 -0500

globus-gridftp-server (9.8-1+gt6.@distro@) @distro@; urgency=low

  * Use prelinks for tests so that they run on El Capitan

 -- Globus Toolkit <support@globus.org>  Mon, 18 Apr 2016 15:04:13 -0400

globus-gridftp-server (9.7-1+gt6.@distro@) @distro@; urgency=low

  * fix crash when storattr is used without modify

 -- Globus Toolkit <support@globus.org>  Thu, 14 Apr 2016 13:55:01 -0500

globus-gridftp-server (9.6-1+gt6.@distro@) @distro@; urgency=low

  * add SITE WHOAMI command to return currently authenticated user

 -- Globus Toolkit <support@globus.org>  Thu, 24 Mar 2016 12:08:03 -0500

globus-gridftp-server (9.5-1+gt6.@distro@) @distro@; urgency=low

  * update manpage for -encrypt-data

 -- Globus Toolkit <support@globus.org>  Tue, 15 Mar 2016 09:34:39 -0400

globus-gridftp-server (9.4-1+gt6.@distro@) @distro@; urgency=low

  * fix mem error when sharing

 -- Globus Toolkit <support@globus.org>  Wed, 16 Dec 2015 09:48:20 -0600

globus-gridftp-server (9.3-2+gt6.@distro@) @distro@; urgency=low

  * Update XIO Driver package names

 -- Globus Toolkit <support@globus.org>  Tue, 15 Dec 2015 10:44:38 -0500

globus-gridftp-server (9.3-1+gt6.@distro@) @distro@; urgency=low

  * Add configuration to require encrypted data channels

 -- Globus Toolkit <support@globus.org>  Mon, 23 Nov 2015 15:23:49 -0600

globus-gridftp-server (9.2-1+gt6.@distro@) @distro@; urgency=low

  * More robust cmp function

 -- Globus Toolkit <support@globus.org>  Fri, 20 Nov 2015 09:21:56 -0500

globus-gridftp-server (9.1-1+gt6.@distro@) @distro@; urgency=low

  * fix for thread race crash between sequential transfers
  * fix for partial stat punting when passed a single entry
  * fix for double free on transfer failure race

 -- Globus Toolkit <support@globus.org>  Tue, 03 Nov 2015 06:41:44 -0600
