@@ -506,13 +506,14 @@ AM_CONDITIONAL([ENABLE_DOXYGEN], [test "$DOXYGEN" != ""])
 TARGETS_FILE=makefile.targets
 echo "$TARGETS" > "$TARGETS_FILE"
 
+GT_PACKAGE_VERSIONS_SH="osx/GT_PKG_LIST_SH"
 MAC_INSTALLER_PKG_REFS="osx/MAC_INSTALLER_PKG_REFS"
 MAC_INSTALLER_CHOICE_LINES="osx/MAC_INSTALLER_CHOICE_LINES"
 MAC_INSTALLER_PACKAGE_CHOICES="osx/MAC_INSTALLER_PACKAGE_CHOICES"
-rm -f "$MAC_INSTALLER_PKG_REFS" "$MAC_INSTALLER_CHOICE_LINES" "$MAC_INSTALLER_PACKAGE_CHOICES"
+rm -f "${GT_PACKAGE_VERSIONS_SH}" "$MAC_INSTALLER_PKG_REFS" "$MAC_INSTALLER_CHOICE_LINES" "$MAC_INSTALLER_PACKAGE_CHOICES"
 mkdir -p osx
 
-touch $MAC_INSTALLER_PKG_REFS $MAC_INSTALLER_CHOICE_LINES $MAC_INSTALLER_PACKAGE_CHOICES
+touch $GT_PACKAGE_VERSIONS_SH $MAC_INSTALLER_PKG_REFS $MAC_INSTALLER_CHOICE_LINES $MAC_INSTALLER_PACKAGE_CHOICES
 GT_TARGETS_OSX_PKG=""
 GT_TARGETS_RPM=""
 GT_TARGETS_DEB=""
@@ -550,6 +551,8 @@ EOF
         GT_TARGETS_ALL="${GT_TARGETS_ALL:+$GT_TARGETS_ALL }packname[-all]"
         GT_TARGETS_DIST="${GT_TARGETS_DIST:+$GT_TARGETS_DIST }packname[-dist]"
         GT_TARGETS_INSTALL="${GT_TARGETS_INSTALL:+$GT_TARGETS_INSTALL }packname[-install]"
+        GT_PACKAGE_LIST_SH="${GT_PACKAGE_LIST_SH:+$GT_PACKAGE_LIST_SH }packname"
+        echo "packname[_version]=m4_expand(packname[_VERSION])" >> "$GT_PACKAGE_VERSIONS_SH"
         fi
     done
     GT_ALL_TARGETS_OSX_PKG="${GT_ALL_TARGETS_OSX_PKG:+$GT_ALL_TARGETS_OSX_PKG }packname[-osx-pkg]"
@@ -608,9 +611,12 @@ AC_SUBST(GT_ALL_STAMPS)
 AC_SUBST(GT_ENABLED_BUNDLES, ["$final_enabled_bundles"])
 AC_SUBST(GT_ENABLED_XIO_DRIVERS, ["$final_enabled_xio_drivers"])
 AC_SUBST(GT_BUNDLES)
+AC_SUBST(GT_PACKAGE_LIST_SH)
+AC_SUBST_FILE(GT_PACKAGE_VERSIONS_SH)
 AC_CONFIG_FILES([Makefile])
 AC_CONFIG_FILES([Doxyfile])
 AC_CONFIG_FILES([doxygen/index.dox])
+AC_CONFIG_FILES([osx/create-packages], [chmod a+x osx/create-packages])
 AC_CONFIG_FILES([osx/distribution.xml])
 AC_CONFIG_FILES([osx/scripts/globus_common/postinstall], [chmod a+x osx/scripts/globus_common/postinstall])
 
