@@ -1,3 +1,9 @@
+globus-gridftp-server (9.9-2+gt6.@distro@) @distro@; urgency=low
+
+  * Change driver dependencies to not include 0 suffix
+
+ -- Globus Toolkit <support@globus.org>  Wed, 27 Apr 2016 14:40:03 -0400
+
 globus-gridftp-server (9.9-1+gt6.@distro@) @distro@; urgency=low
 
   * add -dlpreload force tests
